fix(jackson3): preserve nulls in Object[] to-many conversion
List.of rejected null array elements before classifyToManyItems could
skip them; Arrays.asList keeps List/Iterable null-skipping behavior.